--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,15 @@
 
     <title>Nómade Makerspace</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6C7X7MTL73"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-6C7X7MTL73');
+  </script>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
