--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="🚀 Formamos a niños de 4 a 17 años para los desafíos del futuro a través de clases con nuestra metodología nómadeSTEAM"
+      content="🚀 Impulsa el talento y sostenibilidad de tu empresa con Nómade Makerspace. Soluciones modulares de team building, gamificación y programas de beneficios y de RSE diseñados para fomentar el compromiso, la innovación y el impacto social"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
